--- a/NhtsaClient/NhtsaClient.csproj
+++ b/NhtsaClient/NhtsaClient.csproj
@@ -2,6 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Authors>dmashuda</Authors>
+        <PackageProjectUrl>https://github.com/dmashuda/NhtsaClient</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/dmashuda/NhtsaClient</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
